CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(gles-skeleton VERSION 1.0)
SET(BASEPATH "${CMAKE_SOURCE_DIR}")
SET(CMAKE_SYSTEM_NAME Linux)
SET(CMAKE_SYSTEM_VERSION 1)
SET(CMAKE_CXX_FLAGS "-g -O0")
SET(CMAKE_C_COMPILER /opt/raspbian/buster/sysroots/x86_64-raspbiansdk-linux/bin/arm-linux-gnueabihf-gcc)
SET(CMAKE_CXX_COMPILER /opt/raspbian/buster/sysroots/x86_64-raspbiansdk-linux/bin/arm-linux-gnueabihf-g++)
SET(CMAKE_FIND_ROOT_PATH /opt/raspbian/buster/sysroots/arm-raspbian-linux-gnueabi)
SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
SET(OPENGLES_INCLUDE_DIR ${CMAKE_FIND_ROOT_PATH}/opt/vc/include )
SET(OPENGLES_LIBRARY_DIR ${CMAKE_FIND_ROOT_PATH}//opt/vc/lib )

INCLUDE_DIRECTORIES(${OPENGLES_INCLUDE_DIR} )
FIND_LIBRARY(BCM_LIBRARY NAMES libbcm_host bcm_host 
             HINTS ${OPENGLES_LIBRARY_DIR} )
FIND_LIBRARY(BRCM_GLESV2 NAMES libbrcmGLESv2 brcmGLESv2 
             HINTS ${OPENGLES_LIBRARY_DIR} )
FIND_LIBRARY(BRCM_EGL NAMES libbrcmEGL brcmEGL 
             HINTS ${OPENGLES_LIBRARY_DIR} )
ADD_EXECUTABLE(gles-skeleton gles-skeleton.c)
TARGET_LINK_LIBRARIES(gles-skeleton ${BRCM_GLESV2} ${BRCM_EGL} ${BCM_LIBRARY})

