SET(CMAKE_SYSTEM_NAME Linux)
SET(CMAKE_SYSTEM_VERSION 1)
SET(CMAKE_C_COMPILER /opt/raspbian/buster/sysroots/x86_64-raspbiansdk-linux/bin/arm-linux-gnueabihf-gcc)
SET(CMAKE_CXX_COMPILER /opt/raspbian/buster/sysroots/x86_64-raspbiansdk-linux/bin/arm-linux-gnueabihf-g++)
SET(CMAKE_FIND_ROOT_PATH /opt/raspbian/buster/sysroots/arm-raspbian-linux-gnueabi)
SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)

cmake_minimum_required(VERSION 3.10)

project(hello VERSION 1.0)
SET(BASEPATH "${CMAKE_SOURCE_DIR}")
INCLUDE_DIRECTORIES("${BASEPATH}")
set(CMAKE_CXX_FLAGS "-g -O0")
add_executable(hello hello.c)
